# automated-trading

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AWS_DEPLOYMENT_GUIDE.md  CHANGELOG.md  COMMIT_INSTRUCTIONS.md  DEPLOYMENT_SUMMARY.txt  DEPLOY_AWS.md  DEPLOY_EC2.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INSTALL_AND_RUN.sh  MAC_DEPLOYMENT_CHECKLIST.md  Makefile  PRODUCTION_CHECKLIST.md  README.md  SECURITY_NOTICE.md  UNIT_TEST_FINDINGS.md  crypto_fetcher.py  daily_data_update.py  daily_report.py  docker-compose.yml  fetch_all.py  fetch_with_retry.py  healthcheck.py  main.py  migrate_to_canonical.py  paper_trading_emulator.py  pyproject.toml  requirements.txt  requirements_additions.txt  run_oos_extended.py  run_wf_12m_oos.py  run_wf_paper_emulation.py  setup.cfg  validation_results.txt  version.py  whatif.py
.cache/databento/: catalogue.json  imbalance_20syms_2023-01-03_7df8d4ba.json  imbalance_20syms_2023-01-04_7924d7ed.json  imbalance_20syms_2023-01-05_556f56f7.json  imbalance_20syms_2023-01-06_cc06eade.json  imbalance_20syms_2023-01-09_552cc330.json  imbalance_20syms_2023-01-10_4017179d.json  imbalance_20syms_2023-01-11_97407062.json  imbalance_20syms_2023-01-12_33e7b4b3.json  imbalance_20syms_2023-01-13_a8fb56a4.json  imbalance_20syms_2023-01-17_35ecb744.json  imbalance_20syms_2023-01-18_bb6eb10c.json  imbalance_20syms_2023-01-19_997a1cd7.json  imbalance_20syms_2023-01-20_859cfa18.json  imbalance_20syms_2023-01-23_569c701b.json  imbalance_20syms_2023-01-24_47d4092c.json  imbalance_20syms_2023-01-25_63da0ff1.json  imbalance_20syms_2023-01-26_a8b1ce58.json  imbalance_20syms_2023-01-27_cf38ed67.json  imbalance_20syms_2023-01-30_5cda6f1c.json  imbalance_20syms_2023-01-31_5090c5b5.json  imbalance_20syms_2023-02-01_3ccb598f.json  imbalance_20syms_2023-02-02_208a4af6.json  imbalance_20syms_2023-02-03_a18b0b1c.json  imbalance_20syms_2023-02-06_86d77997.json  imbalance_20syms_2023-02-07_44082557.json  imbalance_20syms_2023-02-08_7e399233.json  (+771 more)
backtest/: README.md  engine.py  engine_rebalance_patch.py  kalshi_fred_proxy_backtest.py  kalshi_wf_validation.py  options_hedge_backtest.py  options_hedge_backtest_v2.py  reporter.py  wf_validator.py
config/: README.md  config.dev.yaml  config.prod.yaml  config.yaml  credentials.py  settings.yaml  settings_additions.yaml
core/: README.md  cost_model.py  crisis_alpha_amplifier.py  h2o_meta_learner.py  h2o_trend_classifier.py  h2o_vol_forecaster.py  intraday_shock.py  kelly_sizer.py  optimizer.py  portfolio.py  price_volume_segments.py  vol_targeting.py
data/: README.md  data_store.py  dynamic_universe_scanner.py  feed.py  oos_extended_results.json  oos_spy_returns.csv  oos_strat_returns.csv  pit_universe.json  regime_params_validated.json  unified_cache.py
deploy/: README.md  aws_ml_architecture.md  aws_setup.md  deploy_aws.sh  run_diagnostic.sh
diagnostics/: README.md  cache_health_check.py  check_databento_catalog.py  check_live_vs_historical.py  find_imbalance_cutoff.py  fix_winter_dst_stubs.py  momentum_factor_analysis.py  pre_acquisition_check.py  restore_empty_stubs.py  smoke_test_empty_files.py  technical_indicator_ic.py  validate_databento_signals.py  wf_calibrate_position_anomaly.py  wf_equity_calibration.json  wf_pos_anomaly_best_params.json  wf_pos_anomaly_calibration.json
docker/: Dockerfile  README.md  docker-compose.yml  prometheus.yml
docs/: README.md  app.js  index.html  options_hedge_analysis.md  paper_trading_runbook.md  style.css
execution/: README.md  alpaca_broker.py  binance_broker.py  broker_base.py  hourly_entry_timer.py  ibkr_broker.py  live_engine.py  options_hedge.py  paper_broker.py
flows/: README.md  backfill_flow.py  feature_flow.py  incremental_flow.py
momentum_signals_exploration/: ANALYSIS_SUMMARY.md  COMMIT_NOW.sh  DO_COMMIT.command  EXPERIMENTATION_QUICKSTART.md  EXPLORATION_GUIDE.md  alerts.py  config.json  data_store.py  filters.py  main.py  price_cache.py  requirements.txt  run_v2.py  scanner.py  scanner_v2.py  symbols.py
momentum_signals_exploration b/: .gitignore  ANALYSIS_SUMMARY.md  DO_COMMIT.command  EXPERIMENTATION_QUICKSTART.md  README.md  alerts.py  run_v2.py  scanner_v2.py  symbols.py
monitoring/: __init__.py  alerting.py  anomaly_detector.py
regime/: README.md  anomaly.py  anomaly_layer.py  calibrate_choppy.py  choppy_regime.py  commodity_fx.py  event_shock.py  ews.py  fx_anomaly.py  intraday_regime.py  kalshi_macro_feed.py  macro_score.py  order_flow_anomaly.py  sentiment_anomaly.py
results/: anomaly_layer_results.json  production_readiness_report.txt  production_readiness_results.json  regime_conditioned_gated.json  regime_conditioned_weights.json  wf_12m_oos_results.json  wf_12m_spy_returns.csv  wf_12m_strat_returns.csv  wf_main_vs_v16.json
risk/: README.md  capital_manager.py  manager.py  position_anomaly.py
scripts/: README.md  build_dashboard_snapshot.py  daily_summary.py  paper_monitor.py  run_backfill.py  setup_infra.sh  status.py  validate_anomaly_layer.py  verify_data.py
src/: README.md
strategy/: README.md  alpaca_microstructure.py  databento_imbalance.py  databento_opening_cross.py  databento_options_flow.py  earnings_nlp_signal.py  options_flow_signal.py  signals.py  signals_patch.py  universe.py
tests/: README.md  conftest.py  production_readiness_test.py  test_anomaly_detector.py  test_anomaly_layer.py  test_capital_manager.py  test_choppy_detector.py  test_config.py  test_credentials.py  test_critical_paths.py  test_data_store.py  test_ews_optimizer_reentry.py  test_hourly_entry_timer.py  test_instance_guard.py  test_leakage_audit.py  test_order_guards.py  test_position_anomaly.py  test_restart_resilience.py  test_signal_shape_regression.py  test_signals.py  test_strategy_guards.py
utils/: README.md  config_loader.py  indicators.py  logger.py
volatility_prediction/: COMMIT_VOL.command  DO_COMMIT.command  README.md  __init__.py  backtest_classification.py  backtest_full.py  requirements.txt  run_vol.py  vol_engine.py
volatility_prediction b/: .gitignore  FIX_PUSH.command  vol_engine.py
(+169 files in other folders)
