[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data-platform"
version = "0.1.0"
description = "Market Data Ingestion and Storage Platform"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pyarrow>=15.0.0",
    "pandas>=2.2.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.1",
    "click>=8.1.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "fsspec>=2024.2.0",
    "aiofiles>=23.2.0",
    "tenacity>=8.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
vendors = ["databento>=0.35.0", "alpaca-py>=0.21.0"]
orchestration = ["prefect>=2.14.0"]
polars = ["polars>=0.20.0"]
azure = ["azure-storage-blob>=12.19.0", "azure-identity>=1.15.0"]
aws = ["s3fs>=2024.2.0", "boto3>=1.34.0"]
gcs = ["gcsfs>=2024.2.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
all = ["market-data-platform[azure,aws,gcs,dev]"]

[project.scripts]
market-data = "market_data.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
